Abstraccion de componentes

--- a/src/TodoIcon/TodoIcon.css
+++ b/src/TodoIcon/TodoIcon.css
@@ -10,7 +10,7 @@
     /* background-color: #CCC; */
 }
 
-.Icon-conatiner-check {
+.Icon-container-check {
     position: absolute;
     left: 12px;
 }
